# F_2202

./: .gitignore  Makefile  README.md  melos.yaml  pull_request_template.md
.github/workflows/: backend-test.yml  dart.yml
backend/: README.md
backend/api/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  deploy.sh  pyproject.toml
backend/api/api/: __main__.py
backend/api/api/interfaces/http/: dto.py  router.py
mobile/: .gitignore  README.md  build.yaml  l10n.yaml  melos.yaml  pubspec.yaml
mobile/.fvm/: flutter_sdk
mobile/ios/Runner/: AppDelegate.swift  Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: app.dart  main.dart
mobile/lib/config/: app_routing.dart  app_routing_name.dart
mobile/lib/data/: property_impl.dart
mobile/lib/infra/: geolocator_api.dart  google_map_place_api.dart  property.dart  property.g.dart
mobile/lib/l10n/: app_ja.arb  app_localization.dart  app_localization_ja.dart
mobile/lib/model/destination/: destination.dart  destination.freezed.dart  destination_response.dart  destination_response.freezed.dart  destination_response.g.dart
mobile/lib/model/property/: property.dart  property.freezed.dart  property.g.dart
mobile/lib/model/store/: store.dart  store.freezed.dart  store_api.dart  store_api.freezed.dart  store_api.g.dart
mobile/lib/presentation/detail/: detail_page.dart
mobile/lib/presentation/property_list/: property_list_page.dart
mobile/lib/presentation/swipe/: swipe_card.dart  swipe_page.dart
mobile/lib/presentation/top/: top_controller.dart  top_controller_provider.dart  (+3 more)
(+26 files in other folders)
